Broken links checker added

--- a/pom.xml
+++ b/pom.xml
@@ -75,7 +75,17 @@
             <artifactId>poi-ooxml</artifactId>
             <version>3.7</version>
         </dependency>
-
+        <!-- Apache HttpClient -->
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.5.13</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpcore</artifactId>
+            <version>4.4.13</version>
+        </dependency>
 
     </dependencies>
 
