new class created Register page

--- a/expectedResults.properties
+++ b/expectedResults.properties
@@ -4,3 +4,8 @@ expectedDollarSign=$
 expectedEuroSign =?
 
 websiteLogo = Qafox.com
+
+
+FirstNameErrorMessage= First Name must be between 1 and 32 characters!
+LastNameErrorMessage= Last Name must be between 1 and 32 characters!
+TelephoneErrorMessage= Telephone must be between 3 and 32 characters!
