creating generic email added to common api

--- a/expectedResults.properties
+++ b/expectedResults.properties
@@ -1,10 +1,10 @@
 expectedPhoneNumber=123456789
 expectedPoundSign=£
 expectedDollarSign=$
-expectedEuroSign =?
 
 websiteLogo = Qafox.com
 
+FirstNameWithSpaces = John Doe
 
 FirstNameErrorMessage= First Name must be between 1 and 32 characters!
 LastNameErrorMessage= Last Name must be between 1 and 32 characters!
