--- a/expectedResults.properties
+++ b/expectedResults.properties
@@ -2,10 +2,21 @@ expectedPhoneNumber=123456789
 expectedPoundSign=£
 expectedDollarSign=$
 
-websiteLogo = Qafox.com
+websiteLogo=Qafox.com
 
-FirstNameWithSpaces = John Doe
 
-FirstNameErrorMessage= First Name must be between 1 and 32 characters!
-LastNameErrorMessage= Last Name must be between 1 and 32 characters!
-TelephoneErrorMessage= Telephone must be between 3 and 32 characters!
+FirstNameErrorMessage=First Name must be between 1 and 32 characters!
+LastNameErrorMessage=Last Name must be between 1 and 32 characters!
+TelephoneErrorMessage=Telephone must be between 3 and 32 characters!
+FirstName=John
+LastName=Doe
+Telephone=1234567809
+Password=password123
+FirstNameWithNumbers=John123
+FirstNameWithSpecialCharacters=John@Doe
+FirstNameWithSpaces=Jo hn
+EmptyFirstNameField=
+LastNameWithNumbers=Doe123
+LastNameWithSpecialCharacters=Doe@Doe
+LastNameWithSpaces=Do e
+EmptyLastNameField=
