LoginPage/test updated Properties renamed

--- a/config.properties
+++ b/config.properties
@@ -20,3 +20,6 @@ LastNameWithNumbers=Doe123
 LastNameWithSpecialCharacters=Doe@Doe
 LastNameWithSpaces=Do e
 EmptyLastNameField=
+EmailAddress=dz@gmail.com
+PassKey=salamo
+InvalidEmailFormat=dz.gmail.com
