Update on common Api Update on config properties

--- a/config.properties
+++ b/config.properties
@@ -23,3 +23,6 @@ EmptyLastNameField=
 EmailAddress=dz@gmail.com
 PassKey=salamo
 InvalidEmailFormat=dz.gmail.com
+
+browserName=Chrome
+url=https://tutorialsninja.com/demo
