--- a/config.properties
+++ b/config.properties
@@ -23,3 +23,8 @@ EmptyLastNameField=
 EmailAddress=dz@gmail.com
 PassKey=salamo
 InvalidEmailFormat=dz.gmail.com
+
+
+checkBrokenLinks=false
+checkSpeed=true
+testUrl=https://tutorialsninja.com/demo/
