--- a/config.properties
+++ b/config.properties
@@ -1,5 +1,5 @@
 expectedPhoneNumber=123456789
-expectedPoundSign=£
+expectedPoundSign=Â£
 expectedDollarSign=$
 
 websiteLogo=Qafox.com
@@ -32,5 +32,5 @@ Postcode=07304
 Region=Bristol
 City=Jersey City
 
-browserName=Firefox
+browserName=Chrome
 url=https://tutorialsninja.com/demo
